break source file path at any character (to fix truncating in Chrome on OSX)

--- a/Resources/public/css/layout.css
+++ b/Resources/public/css/layout.css
@@ -6,3 +6,7 @@ body > .container {
 	padding-top: 50px;
 	margin-top: -50px;
 }
+
+.jms-sources-list-item {
+	word-break: break-all;
+}
